[package]
name = "rust-flux"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "http1", "http2", "json"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
prometheus = "0.13"
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9.3"
notify = "6.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"

